added detailed design report section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         <h3>Presentation and Demo</h3>
         <a href="reports/presentation_and_demo.pdf" download class="download-button">View</a>
       </div>
+      <div class="report-card">
+        <img src="images/report5-icon.png" alt="Report Icon">
+        <h3>Detailed Design Report</h3>
+        <a href="reports/detailed_design.pdf" download class="download-button">View</a>
+      </div>
     </div>
   </section>
 
